# speckle_automate_python_visibility

./: flatten.py  main.py  pyproject.toml  testing_local.py
utils/: convex_shape.py  scipy_replacement.py  utils_other.py  utils_visibility.py  vectors.py
