[tool.poetry]
name = "speckle-automate-py"
version = "0.1.0"
description = "Example function for Speckle Automate using specklepy"
authors = ["Gergő Jedlicska <gergo@jedlicska.com>"]
readme = "README.md"
packages = [{include = "src/speckle_automate_py"}]

[tool.poetry.dependencies]
python = "^3.10"
specklepy = "^2.16.0"
typer = "^0.9.0"
pydantic = "^2.1.1"
stringcase = "^1.2.0"
numpy = "^1.25.2"
pyproj = "^3.6.0"
shapely = "^2.0.1"
pandana = "^0.7"
osmnet = "^0.1.7"
matplotlib = "^3.7.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
ruff = "^0.0.271"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
